Address PR issue - Remove horizontal scroll bar

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
 
 html {
   width: fit-content;
+  overflow-x: hidden;
 }
 
 a {
